--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "dev": "webpack",
-    "build": "webpack --node-env=production",
+    "build:dev": "webpack --node-env=development",
+    "build:prod": "webpack --node-env=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
