--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve",
     "build:dev": "webpack --node-env=development",
     "build:prod": "webpack --node-env=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
