--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "semi": true,
   "singleQuote": true,
   "printWidth": 120,
-  "bracketSameLine": false
+  "bracketSameLine": false,
+  "endOfLine": "auto"
 }
