--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
