--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:prod": "webpack --node-env=production",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prettier:check": "prettier . --check !.github",
-    "prettier:fix": "prettier . --write !.github",
+    "prettier:check": "prettier . --check",
+    "prettier:fix": "prettier . --write",
     "test": "jest",
     "prepare": "husky install"
   },
