--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@types/jest": "^29.5.3",
+    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "@commercetools/platform-sdk": "^4.11.0",
-    "@commercetools/sdk-client-v2": "^2.2.0"
+    "@commercetools/sdk-client-v2": "^2.2.0",
+    "node-fetch": "^2.6.7"
   }
 }
