fix: change jest config for correct testing

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,9 @@
 {
   "preset": "ts-jest",
-  "testEnvironment": "node",
-  "testMatch": ["**/tests/**/*.test.ts"],
-  "moduleFileExtensions": ["ts", "js"]
+  "testEnvironment": "jsdom",
+  "moduleFileExtensions": ["ts", "js"],
+  "testMatch": ["**/__tests__/**/*.+(ts|tsx|js)", "**/?(*.)+(spec|test).+(ts|tsx|js)"],
+  "moduleNameMapper": {
+    "^.+\\.(css|less|scss)$": "babel-jest"
+  }
 }
