--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.22.9",
     "@types/jest": "^29.5.3",
     "@types/node-fetch": "^2.6.4",
+    "@types/toastify-js": "^1.12.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "@commercetools/platform-sdk": "^4.11.0",
-    "@commercetools/sdk-client-v2": "^2.2.0"
+    "@commercetools/sdk-client-v2": "^2.2.0",
+    "toastify-js": "^1.12.0"
   }
 }
